--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,8 +2,7 @@
 layout: default
 ---
 
-<div class="post">
-  <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
+<div class="page">
+  <h1 class="page-title">{{ page.title }}</h1>
   {{ content }}
 </div>
