--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,6 +25,6 @@ layout: default
 </div>
 
 <div class="comments">
-  <h2>Comments:</h2>
+  <h2>Comments</h2>
   {% include comments.html %}
 </div>
