--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -4,7 +4,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-70108277-1', 'makingchips.github.io');
+  ga('create', 'UA-70108277-1', 'auto');
   ga('send', 'pageview');
 
 </script>
